--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 	<div class="video">
 	<a name="video"></a>
 	<h1>Trailer</h1>
-	<video width="vw" controls="controls">
-        <source src="trailer.mp4" type="video/webm" />
-	</video>
 
+	<iframe width="420" height="315"
+	src="https://www.youtube.com/embed/watch?v=y8O5g1wn9iw">
+	</iframe>
 
 		
 	</div>
@@ -46,15 +46,15 @@
 		<h1>Verloop Expeditie</h1></a>
 		<p>De expeditie leid je door het Ruhr gebied, je volgt twee tracks, een foto track en een vragen track. De foto track vereist dat je een foto’s neemt van de bestemming om de opdracht te halen. De vragen track zal je vragen stellen over het gebied, dit zal betrekking hebben op natuur, cultuur en industrie.</p>
 
-		<h2>Vrijdag:</h2>
+		<h2>Vrijdag</h2>
 		<p>Vrijdag avond 20:30 begin het avontuur. Je krijgt een Ruhrbox, hierin zit alles wat je de gehele expeditie nodig hebt. Hierna kan je nog enkele opdrachten uitvoeren, als je dat durft in het donker.</p>
 		<div class="zaterdag">
-		<h2>Zaterdag:</h2>
+		<h2>Zaterdag</h2>
 		<p>Zaterdag kun je aan beide tracks beginnen. Je zal de hele dag bezig zijn met vragen beantwoorden en het Ruhr gebied ontdekken. Hoe verder je komt hoe dichter je bij het geheim komt, maar hoe gevaarlijker de tocht zal worden.</p>
 		</div>
 
 		<div class="zondag">
-		<h2>Zondag: De ontknoping!</h2>
+		<h2>Zondag De ontknoping!</h2>
 		<p class="last">Zondag zal de finale plaatsvinden. Je zal het laatste stukje van de tracks afmaken en dan is er een finale, in dit spel moet je alles gebruiken wat je dit weekend hebt geleerd over het gebied. Het draait om snelheid, samenwerking en creativiteit om zo snel mogelijk bij je bestemming te komen. Je moet niet alleen een nieuw gebied ontdekken, maar ook zal dit het gevaarlijkste gebied zijn. Je wilt hier niet te lang blijven want er is overal gevaar. Je moet zo snel mogelijk de buit vinden en weer uit het gebied vluchten. Doe dit snel want je weet nooit wat je achterna zit.</p>
 		</div>
 	</div>
