--- a/meedoen.html
+++ b/meedoen.html
@@ -22,8 +22,8 @@
 			<em>Vul je telefoon nummer in:</em>
 			<input type="text" size="50" maxlength="20" name="nummer"><br>
 			<em>Vul eventueele bijzonderheden in:</em><br>
-			<textarea rows="10" cols="30" name="bijzonderheden"></textarea><br>
-			<input class="verzend" type="submit" value="Verzenden">
+			<textarea rows="10" cols="40" name="bijzonderheden"></textarea><br>
+			<input type="submit" id="verzend" value="verzend" class="verzend">
 
 		</form>
 	</div>
