--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
 	<a name="video"></a>
 	<h1>Trailer</h1>
 
-	<iframe width="420" height="315"
-	src="https://www.youtube.com/embed/watch?v=y8O5g1wn9iw">
-	</iframe>
+	<video width="575" height="300" controls="controls">
+        <source src="trailer.mp4" type="video/webm" />
+        <source src="trailer.mp4" type="video/mp4" />
+        Je browser heeft geen ondersteuning voor video.
+</video>
 
 		
 	</div>
